testsuite/tests/interpreter_errors/combine_to_invalid_type/test.out
script.lkql:2:7: error: Unsupported operation: Str & Int
2 | print("a".combine(2))
  |       ^^^^^^^^^^^^^^
 in combine (called at script.lkql:2:7)
